--- a/docs/scribbler-global.css
+++ b/docs/scribbler-global.css
@@ -94,7 +94,7 @@ hr {
   font-family: Space Mono, SFMono-Regular, Menlo,Monaco, Consolas, Liberation Mono, Courier New, monospace;
   background: var(--bg-color);
   border: 1px solid var(--code-bg-color);
-  color: var(--primary-color-light);
+  color: var(--dark-gray-color);
 }
 
 .code--block {
