fix some bugs and creating a sidebar component

--- a/src/lib/components/Carousel/Carousel.scss
+++ b/src/lib/components/Carousel/Carousel.scss
@@ -5,7 +5,7 @@ $slick-loader-path: "~slick-carousel/slick/";
 
 @import url('http://use.fontawesome.com/releases/v5.8.1/css/all.css');
 
-#trich_carousel {
+.trich_carousel {
     .slick-prev {
         &:before {
             font-family: "Font Awesome 5 Free";
