card components; bugs fixes; docs

--- a/src/lib/components/SideBar/SideBar.scss
+++ b/src/lib/components/SideBar/SideBar.scss
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 599px) {
     .sidenav---collapsed---LQDEv {
-        background-color: transparent;
+        background-color: transparent !important;
     }
 
     .sidenav---collapsed---LQDEv .sidenav---sidenav-nav---3tvij {
